checking if it works or not🥰🥰

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 --safety-orange-gradient: linear-gradient(to right, #0083B0, #00B4DB);
    --lavender-gray: hsl(230, 19%, 81%);
    --persian-rose: #0078b0;
-   --red-crayola: #0083B0;
+   --red-crayola: #b00000;
    --eerie-black: hsl(240, 6%, 10%);
    --light-gray: hsl(0, 0%, 80%);
    --cultured-2: hsl(210, 60%, 98%);
